Added Data Retention Policy page

--- a/blog.html
+++ b/blog.html
@@ -2,144 +2,144 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <meta name="description" content="SendMail +++++++++++++++++++++++++++++++." />
+   <meta name="description" content="SendMail" />
 
-    <link
-        href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600|Nunito:300,300i,400,600&display=swap"
-        rel="stylesheet" />
+   <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600|Nunito:300,300i,400,600&display=swap"
+      rel="stylesheet" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-    <script src="https://kit.fontawesome.com/d0cbf0cdf0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="css/style.css" />
+   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+   <script src="https://kit.fontawesome.com/d0cbf0cdf0.js" crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-    <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
+   <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
 
-    <script defer src="JS/script.js"></script>
+   <script defer src="JS/script.js"></script>
 
-    <title>SendMail &mdash; secured mail</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+   <title>SendMail &mdash; secured mail</title>
+   <link rel="icon" type="image/x-icon" href="/img/favicon.png">
 </head>
 
 <body class="container">
-    <header class="navigation-header">
+   <header class="navigation-header">
 
-        <a href="/index.html">
-            <img class="logo" alt="SendMail logo" src="img/logo-2.png" />
-        </a>
+      <a href="/index.html">
+         <img class="logo" alt="SendMail logo" src="img/logo-2.png" />
+      </a>
 
-        <nav class="main-nav">
-            <ul class="main-nav-list">
-                <li><a class="main-nav-link" href="/index.html">Home</a></li>
-                <li><a class="main-nav-link" href="/index.html#about">About</a></li>
-                <li>
-                    <a class="main-nav-link" href="/index.html#features">Features</a>
-                </li>
-                <li><a class="main-nav-link" href="/blog.html">Blog</a></li>
-                <a href="/index.html">
-                    <button class="hero-btn-dark">Login</button>
-                </a>
-
-                <a href="/sign-up.html">
-                    <button class="hero-btn-light">Register</button>
-                </a>
-            </ul>
-        </nav>
-
-        <button class="btn-mobile-nav">
-            <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
-            <ion-icon class="icon-mobile-nav dark" name="close-outline"></ion-icon>
-        </button>
-
-    </header>
-
-    <div class="section-about" id="about">
-        <div class="about">
-            <div class="about-heading">
-                Blog
-            </div>
-            <p class="about-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.
-            </p>
-            <p class="about-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Vel pharetra vel turpis nunc eget lorem dolor sed. Lacus vel facilisis volutpat est
-                velit egestas dui id. Praesent semper feugiat nibh sed pulvinar. Lacus luctus accumsan tortor posuere ac
-                ut. Quis blandit turpis cursus in hac habitasse. Ultrices gravida dictum fusce ut placerat orci nulla
-                pellentesque dignissim. Euismod elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Elit
-                at imperdiet dui accumsan sit amet nulla facilisi. Dui vivamus arcu felis bibendum ut tristique. Quam
-                nulla porttitor massa id neque aliquam vestibulum morbi. Ut enim blandit volutpat maecenas volutpat
-                blandit aliquam etiam erat.
-
-                Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer. Fermentum et sollicitudin ac orci
-                phasellus. Lacus vel facilisis volutpat est velit. Nunc mi ipsum faucibus vitae aliquet. Pulvinar etiam
-                non quam lacus suspendisse faucibus interdum posuere lorem. Ac auctor augue mauris augue neque gravida
-                in. Aenean et tortor at risus viverra adipiscing. Lorem ipsum dolor sit amet consectetur adipiscing elit
-                pellentesque. Feugiat in fermentum posuere urna nec tincidunt. Ornare arcu dui vivamus arcu felis
-                bibendum ut tristique et. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Quis
-                lectus nulla at volutpat diam ut venenatis tellus in. Sollicitudin nibh sit amet commodo nulla facilisi
-                nullam. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a.
-
-            </p>
+      <nav class="main-nav">
+         <ul class="main-nav-list">
+            <li><a class="main-nav-link" href="/index.html">Home</a></li>
+            <li><a class="main-nav-link" href="/index.html#about">About</a></li>
+            <li>
+               <a class="main-nav-link" href="/index.html#features">Features</a>
+            </li>
+            <li><a class="main-nav-link" href="/blog.html">Blog</a></li>
             <a href="/index.html">
-                <button class="hero-btn-dark">Home</button>
+               <button class="hero-btn-dark">Login</button>
             </a>
-        </div>
-    </div>
+
+            <a href="/sign-up.html">
+               <button class="hero-btn-light">Register</button>
+            </a>
+         </ul>
+      </nav>
+
+      <button class="btn-mobile-nav">
+         <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+         <ion-icon class="icon-mobile-nav dark" name="close-outline"></ion-icon>
+      </button>
+
+   </header>
+
+   <div class="section-about" id="about">
+      <div class="about">
+         <div class="about-heading">
+            Blog
+         </div>
+         <p class="about-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+            deserunt mollit anim id est laborum.
+         </p>
+         <p class="about-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Vel pharetra vel turpis nunc eget lorem dolor sed. Lacus vel facilisis volutpat est
+            velit egestas dui id. Praesent semper feugiat nibh sed pulvinar. Lacus luctus accumsan tortor posuere ac
+            ut. Quis blandit turpis cursus in hac habitasse. Ultrices gravida dictum fusce ut placerat orci nulla
+            pellentesque dignissim. Euismod elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Elit
+            at imperdiet dui accumsan sit amet nulla facilisi. Dui vivamus arcu felis bibendum ut tristique. Quam
+            nulla porttitor massa id neque aliquam vestibulum morbi. Ut enim blandit volutpat maecenas volutpat
+            blandit aliquam etiam erat.
+
+            Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer. Fermentum et sollicitudin ac orci
+            phasellus. Lacus vel facilisis volutpat est velit. Nunc mi ipsum faucibus vitae aliquet. Pulvinar etiam
+            non quam lacus suspendisse faucibus interdum posuere lorem. Ac auctor augue mauris augue neque gravida
+            in. Aenean et tortor at risus viverra adipiscing. Lorem ipsum dolor sit amet consectetur adipiscing elit
+            pellentesque. Feugiat in fermentum posuere urna nec tincidunt. Ornare arcu dui vivamus arcu felis
+            bibendum ut tristique et. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Quis
+            lectus nulla at volutpat diam ut venenatis tellus in. Sollicitudin nibh sit amet commodo nulla facilisi
+            nullam. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a.
+
+         </p>
+         <a href="/index.html">
+            <button class="hero-btn-dark">Home</button>
+         </a>
+      </div>
+   </div>
 
 
-    <footer class="section-footer">
-        <div class="footer">
-            <div class="footer-image">
-                <a href="/index.html">
-                    <img class="footer-logo" alt="SendMail logo" src="img/logo-2.png" />
-                </a>
-            </div>
+   <footer class="section-footer">
+      <div class="footer">
+         <div class="footer-image">
+            <a href="/index.html">
+               <img class="footer-logo" alt="SendMail logo" src="img/logo-2.png" />
+            </a>
+         </div>
 
-            <nav class="footer-link">
-                <ul class="footer-nav-list">
-                    <li><a class="footer-nav-link" href="/index.html">Home</a></li>
-                    <li><a class="footer-nav-link" href="/index.html#about">About</a></li>
-                    <li>
-                        <a class="footer-nav-link" href="/index.html#features">Features</a>
-                    </li>
-                    <li><a class="footer-nav-link" href="/blog.html">Blog</a></li>
-                </ul>
-            </nav>
+         <nav class="footer-link">
+            <ul class="footer-nav-list">
+               <li><a class="footer-nav-link" href="/index.html">Home</a></li>
+               <li><a class="footer-nav-link" href="/index.html#about">About</a></li>
+               <li>
+                  <a class="footer-nav-link" href="/index.html#features">Features</a>
+               </li>
+               <li><a class="footer-nav-link" href="/blog.html">Blog</a></li>
+            </ul>
+         </nav>
 
-            <div class="footer-socials">
-                <a href="https://www.facebook.com" target="_blank" class="social">
-                    <i class="fa-brands fa-facebook-f a"></i>
-                    <i class="fa-brands fa-facebook b"></i>
-                </a>
-                <a href="https://www.twitter.com" target="_blank" class="social">
-                    <i class="fa-brands fa-twitter a"></i>
-                    <i class="fa-brands fa-square-twitter b"></i>
-                </a>
-                <a href="https://www.gmail.com" target="_blank" class="social">
-                    <i class="fa-regular fa-envelope a"></i>
-                    <i class="fa-solid fa-envelope b"></i>
-                </a>
-                <a href="https://www.linkedin.com" target="_blank" class="social">
-                    <i class="fa-brands fa-linkedin-in a"></i>
-                    <i class="fa-brands fa-linkedin b"></i>
-                </a>
-            </div>
-        </div>
+         <div class="footer-socials">
+            <a href="https://www.facebook.com" target="_blank" class="social">
+               <i class="fa-brands fa-facebook-f a"></i>
+               <i class="fa-brands fa-facebook b"></i>
+            </a>
+            <a href="https://www.twitter.com" target="_blank" class="social">
+               <i class="fa-brands fa-twitter a"></i>
+               <i class="fa-brands fa-square-twitter b"></i>
+            </a>
+            <a href="https://www.gmail.com" target="_blank" class="social">
+               <i class="fa-regular fa-envelope a"></i>
+               <i class="fa-solid fa-envelope b"></i>
+            </a>
+            <a href="https://www.linkedin.com" target="_blank" class="social">
+               <i class="fa-brands fa-linkedin-in a"></i>
+               <i class="fa-brands fa-linkedin b"></i>
+            </a>
+         </div>
+      </div>
 
-    </footer>
+   </footer>
 </body>
 
 </html>
