Updated some changes

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-   <meta name="description" content="SendMail" />
+   <meta name="description" content="SendMail &dash;  Secure Email Solutions" />
 
    <link
       href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600|Nunito:300,300i,400,600&display=swap"
@@ -40,6 +40,7 @@
          <ul class="main-nav-list">
             <li><a class="main-nav-link" href="/index.html">Home</a></li>
             <li><a class="main-nav-link" href="/index.html#about">About</a></li>
+            <li><a class="main-nav-link" href="/dataPolicy.html">Data Policy</a></li>
             <li>
                <a class="main-nav-link" href="/index.html#features">Features</a>
             </li>
