--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-   <meta name="description" content="SendMail +++++++++++++++++++++++++++++++." />
+   <meta name="description" content="SendMail &dash;  Secure Email Solutions" />
 
    <link
       href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600|Nunito:300,300i,400,600&display=swap"
@@ -14,7 +14,7 @@
 
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/style.css" />
-   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+   <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
    <script src="https://kit.fontawesome.com/d0cbf0cdf0.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -25,7 +25,7 @@
    <script defer src="JS/script.js"></script>
 
    <title>SendMail &mdash; secured mail</title>
-   <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 
 <body class="container">
@@ -39,6 +39,7 @@
          <ul class="main-nav-list">
             <li><a class="main-nav-link" href="/index.html">Home</a></li>
             <li><a class="main-nav-link" href="#about">About</a></li>
+            <li><a class="main-nav-link" href="/dataPolicy.html">Data Policy</a></li>
             <li>
                <a class="main-nav-link" href="#features">Features</a>
             </li>
