Updated a few changes

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                <a class="main-nav-link" href="#features">Features</a>
             </li>
             <li><a class="main-nav-link" href="/blog.html">Blog</a></li>
-            <a href="/index.html">
+            <a href="/login.html">
                <button class="hero-btn-dark">Login</button>
             </a>
 
@@ -73,7 +73,7 @@
 
             <div class="hero-btn">
                <h2 class="hero-btn-text">Have an account? Login or kindly register an account with us?</h2>
-               <a href="/index.html">
+               <a href="/login.html">
                   <button class="hero-btn-dark">Login here</button>
                </a>
 
