--- a/dataPolicy.html
+++ b/dataPolicy.html
@@ -14,7 +14,7 @@
 
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/style.css" />
-   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+   <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
    <script src="https://kit.fontawesome.com/d0cbf0cdf0.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
@@ -26,7 +26,7 @@
    <script defer src="JS/script.js"></script>
 
    <title>SendMail &mdash; secured mail</title>
-   <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 
 <body class="container">
@@ -47,7 +47,7 @@
                <a class="main-nav-link" href="/index.html#features">Features</a>
             </li>
             <li><a class="main-nav-link" href="/blog.html">Blog</a></li>
-            <a href="/index.html">
+            <a href="/login.html">
                <button class="hero-btn-dark">Login</button>
             </a>
 
