--- a/sign-up.html
+++ b/sign-up.html
@@ -14,7 +14,7 @@
 
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/style.css" />
-   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+   <link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
    <script src="https://kit.fontawesome.com/d0cbf0cdf0.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
@@ -24,7 +24,7 @@
    <script defer src="JS/script.js"></script>
 
    <title>SendMail &mdash; secured mail</title>
-   <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 
 <body class="container">
@@ -44,7 +44,7 @@
             </li>
             <li><a class="main-nav-link" href="/blog.html">Blog</a></li>
 
-            <a href="/index.html">
+            <a href="/login.html">
                <button class="hero-btn-dark">Login</button>
             </a>
             <a href="/sign-up.html">
@@ -99,7 +99,7 @@
                   <button class="hero-btn-dark">Sign Up now</button>
 
                   <div class="registration-form_user">
-                     <h3 class="registration-form-user_login">Already have an account? <a href="/index.html"
+                     <h3 class="registration-form-user_login">Already have an account? <a href="/login.html"
                            class="registration-form-user_login-link"> &nbsp Login now </a>
                      </h3>
                   </div>
@@ -123,6 +123,7 @@
             <ul class="footer-nav-list">
                <li><a class="footer-nav-link" href="/index.html">Home</a></li>
                <li><a class="footer-nav-link" href="/index.html#about">About</a></li>
+               <li><a class="footer-nav-link" href="/dataPolicy.html">Data Policy</a></li>
                <li>
                   <a class="footer-nav-link" href="/index.html#features">Features</a>
                </li>
