Added a countdown to Launch section

--- a/dataPolicy.html
+++ b/dataPolicy.html
@@ -80,7 +80,7 @@
             </p>
 
             <p class="data-text">
-               Getsend prioritizes user security with these measures:
+               Getsend prioritizes user security with these measures:</p>
             <ul class="data-text-list">
                <li>Messages are end-to-end encrypted, reducing interception risks.</li>
                <li>Data is inaccessible to anyone, including Proton Mail, as only users possess decryption keys.</li>
@@ -89,7 +89,7 @@
                <li>We are open source and independently funded and audited for transparency.</li>
                <li>Strong physical security with own server in Nigeria with solid data protection.</li>
             </ul>
-            </p>
+            <p class="data-text"></p>
          </div>
 
          <div class="mb-2 ">
