--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
    <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
 
    <script defer src="JS/script.js"></script>
+   <script defer src="JS/main.js"></script>
 
    <title>SendMail &mdash; secured mail</title>
    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
@@ -93,6 +94,55 @@
                 <img class="hero-image_image" src="img/hero-image.svg" alt="">
             </div> -->
       </div>
+
+   </section>
+
+   <section id="section-countdown" class="section-countdown">
+      <div class="countdown">
+
+         <div class="section-countdown__bg"></div>
+
+         <div class="row section-countdown__content">
+
+            <div class="section-countdown__content-top">
+               <h1>
+                  We are currently working on something awesome. Stay tuned!
+               </h1>
+               <!-- <p class="">
+                  Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin,
+                  lorem quis bibendum auctor, nisi elit consequat ipsum.
+               </p> -->
+            </div>
+
+            <div class="section-countdown__content-sep">
+               <span></span>
+               <span>Time left until launching</span>
+               <span></span>
+            </div>
+
+            <div class="section-countdown__content-counter counter">
+               <div class="counter__time">
+                  <span class="ss-days">365</span>
+                  <span>Days</span>
+               </div>
+               <div class="counter__time">
+                  <span class="ss-hours">03</span>
+                  <span>Hours</span>
+               </div>
+               <div class="counter__time minutes">
+                  <span class="ss-minutes">01</span>
+                  <span>Mins</span>
+               </div>
+               <div class="counter__time">
+                  <span class="ss-seconds">55</span>
+                  <span>Secs</span>
+               </div>
+            </div>
+
+         </div>
+      </div>
+      </div>
+
    </section>
 
    <section class="section-about" id="about">
