--- a/policy.html
+++ b/policy.html
@@ -25,15 +25,15 @@
 
    <script defer src="JS/script.js"></script>
 
-   <title>SendMail &mdash; secured mail</title>
-   <link rel="icon" type="image/x-icon" href="/img/logo-2.png">
+   <title>SendMail — secured mail</title>
+   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 
 <body class="container">
    <header class="navigation-header">
 
       <a href="/index.html">
-         <img class="logo" alt="SendMail logo" src="img/favicon.ico" />
+         <img class="logo" alt="SendMail logo" src="img/logo-2.png" />
       </a>
 
       <nav class="main-nav">
@@ -45,7 +45,7 @@
                <a class="main-nav-link" href="/index.html#features">Features</a>
             </li>
             <li><a class="main-nav-link" href="/blog.html">Blog</a></li>
-            <a href="/login.html">
+            <a href="/index.html">
                <button class="hero-btn-dark">Login</button>
             </a>
 
@@ -62,26 +62,108 @@
 
    </header>
 
-
-   <div class="section-about" id="about">
-      <div class="about">
-         <div class="about-heading">
+   <div class="section-data" id="data">
+      <div class="data">
+         <div class="data-header">
             Terms and Conditions
          </div>
-         <p class="about-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dicta quas doloribus qui ad illum
-            veritatis, nihil, veniam quasi voluptatem aspernatur sapiente excepturi recusandae adipisci earum
-            consequatur incidunt harum amet.
-         </p>
+
+         <div class="data-header-mini">
+            Our commitment is to be clear and transparent. Therefore, we've written this in plain language without
+            technical or legal jargon.
+         </div>
+
+         <div class="mb-2 ">
+            <p class="data-heading">What data do we gather? </p>
+            <p class="data-text">We collect IP addresses, message IDs, sender and recipient addresses, subjects,
+               browser versions, countries, and timestamps. Our system automatically checks incoming and outgoing
+               messages using anti-spam, anti-virus, and anti-abuse routines. When you make payments with your credit
+               card, we securely store some necessary details. It's also essential to know that our team members have
+               signed confidentiality agreements to protect all the data we collect. Your privacy is our priority.
+            </p>
+         </div>
+
+         <div class="mb-2 ">
+            <p class="data-heading">How we use the information wey collect? </p>
+
+            <p class="data-text">The data we gather serves various essential purposes, including:
+
+            <ul class="data-text-list">
+               <li>Conducting technical assessments.</li>
+               <li>Delivering customer service.</li>
+               <li>Facilitating payment transactions.
+               </li>
+            </ul>
+            </p>
+         </div>
+
+         <div class="mb-2 ">
+            <p class="data-heading">The Intersection of Privacy, Technology, and Government </p>
+
+            <p class="data-text">On the 14th of June 2023, President Bola Tinubu signed into law the Data Protection
+               Act, 2023, in Nigeria. The main objective of this Act is to protect the fundamental rights, freedoms, and
+               interests of data subjects, as guaranteed under the 1999 Constitution of Nigeria.
+            </p>
+
+            <p class="data-text"> It is important to note that we do not participate in any form of private or
+               government surveillance or monitoring services. We want to make it clear that, aside from the Nigerian
+               government, we do not cooperate with any other government or authority regarding access to our service or
+               the disclosure of user information.
+            </p>
+
+            <p class="data-text"> Moreover, we strictly abide by the Data Protection Act, 2023,
+               and will not directly disclose any information about our users to law enforcement agencies from
+               outside
+               Nigeria unless required by law.
+            </p>
+
+            <p class="data-text">For additional information on our commitment to transparency and your
+               data privacy, please refer to our transparency report, along with the up-to-date warrant canary.
+            </p>
+
+            <p class="data-text">&dash; SendMail is a service provided by a Nigerian company, and as such, it is subject
+               to
+               Nigerian law. Nigeria has stringent privacy laws in place, ensuring the protection of your data and
+               upholding your privacy rights.
+            </p>
+         </div>
+
+         <div class="mb-2 ">
+            <p class="data-heading">Data Retention Policy</p>
+
+            <p class="data-text">As part of our commitment to data security and transparency, we store all customer
+               data on servers located within Nigeria. Should you wish to have your data removed from our records,
+               you
+               can initiate a data deletion request by sending an email to our support. We will promptly begin the
+               deletion process, ensuring that all identifiable data associated with your account is permanently
+               removed
+               within a maximum of 10 business days from the date of your initial request. Please note that certain
+               legal obligations or regulatory requirements may limit our ability to delete specific data, but rest
+               assured, we prioritize the protection of your information throughout the process.
+            </p>
+
+         </div>
+
+         <div class="mb-2 ">
+            <p class="data-heading">Updating Our Privacy Policies</p>
+
+            <p class="data-text">In the event of any updates or modifications to our privacy policy, we will
+               promptly
+               inform you of the changes. Your awareness and understanding of any revisions to the policy are of
+               utmost
+               importance to us.
+            </p>
+         </div>
+
          <p class="about-text">
             If you accept the terms and conditions, kindly click on the button below to sign up.
          </p>
-         <a href="/sign-up.html">
+
+         <a style="text-align: center;" href="/sign-up.html">
             <button class="hero-btn-dark">Accept & continue</button>
          </a>
       </div>
    </div>
-
 
    <footer class="section-footer">
       <div class="footer">
@@ -96,7 +178,7 @@
                <li><a class="footer-nav-link" href="/index.html">Home</a></li>
                <li><a class="footer-nav-link" href="/index.html#about">About</a></li>
                <li>
-                  <a class="footer-nav-link" href="/index.html#features">Features</a>
+                  <a class="footer-nav-link" href="/policy.html">Privacy</a>
                </li>
                <li><a class="footer-nav-link" href="/blog.html">Blog</a></li>
             </ul>
